ブロック自動落下が出来た

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -1,5 +1,7 @@
 .container {
   display: flex;
+  flex-direction: column;
+  gap: 30px;
   align-items: center;
   justify-content: center;
   width: 100%;
@@ -18,4 +20,15 @@
 .cell {
   width: 40px;
   height: 40px;
+}
+
+.button {
+  background-color: black;
+  color: white;
+  padding: 15px 40px;
+  border-radius: 10px;
+}
+.button:hover{
+  opacity: 0.5;
+  cursor: pointer;
 }
