--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,10 +1,11 @@
+/* stylelint-disable prettier/prettier */
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
     'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-  background-color: rgba(0, 0, 0, 0.611);
+  background-color: rgb(0 0 0 / 61.1%);
 }
 
 a {
